--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: bangs
 description: A new flutter plugin project.
 version: 0.0.1
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -10,6 +11,8 @@ dependencies:
   dio: ^4.0.0
   flutter:
     sdk: flutter
+  utils:
+    path: ../utils
 
 dev_dependencies:
   flutter_test:
