--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   dio: ^4.0.0
   flutter:
     sdk: flutter
-  utils:
+  nop:
     git:
-      url: https://github.com/sersr/utils.git
+      url: https://github.com/sersr/nop.git
 
 dev_dependencies:
   flutter_test:
