--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,7 @@ dependencies:
   dio: ^4.0.0
   flutter:
     sdk: flutter
-  nop:
-    git:
-      url: https://github.com/sersr/nop.git
+  nop: ^0.0.2+1
 
 dev_dependencies:
   flutter_test:
