--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   dio: ^4.0.0
   flutter:
     sdk: flutter
-  nop: ^0.0.2+1
+  nop: ">=0.0.3+1"
 
 dev_dependencies:
   flutter_test:
